--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,20 @@ body {
   background-size: cover;
 }
 
+/* construccion */
+
+.construccion {
+  padding-top: 10%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #eee;
+  width: 100%;
+  height: 70vh;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 /* Navbar */
 .nav-wrapper {
   max-width: 1200px;
